syntax = "proto3";
package driver.v1;

import "buf/validate/validate.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/escoutdoor/linko/common/pkg/proto/driver/v1;driverv1";

enum VehicleType {
  VEHICLE_TYPE_UNSPECIFIED = 0;
  VEHICLE_TYPE_CAR = 1;
  VEHICLE_TYPE_MOTORBIKE = 2;
  VEHICLE_TYPE_BICYCLE = 3;
  VEHICLE_TYPE_PEDESTRIAN = 4;
}

enum DriverStatus {
  DRIVER_STATUS_UNSPECIFIED = 0;
  DRIVER_STATUS_OFFLINE = 1;
  DRIVER_STATUS_ONLINE = 2;
  DRIVER_STATUS_BUSY = 3;
}

message Vehicle {
  // type of the vehicle
  VehicleType type = 1 [(buf.validate.field).enum.defined_only = true];

  // model of the vehicle
  string model = 2;

  // plate number
  string plate_number = 3;

  // color
  string color = 4;
}

message Driver {
  // The identifier of the driver
  string id = 1;
  // The identifier of the user connected to this driver account
  string user_id = 2;

  // The rating of the driver
  float rating = 3;
  // Review count 
  int32 review_count = 4;

  // Driver activity status (e.g. online)
  DriverStatus status = 5;
  // Vehicle details (type, model, number, color etc)
  Vehicle vehicle = 6;

  // Date of creation
  google.protobuf.Timestamp created_at = 7;
  // Date of the latest update
  google.protobuf.Timestamp updated_at = 8;
}

message CreateDriverRequest {
  // The identifier of the user to connect with
  string user_id = 1 [(buf.validate.field).string.uuid = true];

  // vehicle of the driver
  // caution
  // a user can create a driver profile without it
  // but driver is not allowed to take any order without it
  Vehicle vehicle = 2;
}

message CreateDriverResponse {
  // Created driver profile
  Driver driver = 1;
}

message DriverUpdate {
  // driver status
  DriverStatus status = 1 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).enum.defined_only = true
  ];

  // vehicle
  Vehicle vehicle = 2 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED
  ];
}

message UpdateDriverRequest {
  // The id of the driver to update
  string driver_id = 1 [(buf.validate.field).string.uuid = true];

  // Values
  DriverUpdate update = 2;

  // The fields to update
  google.protobuf.FieldMask update_mask = 3;
}

message UpdateDriverResponse {
  // Updated driver
  Driver driver = 1;
}

message GetDriverRequest {
  // The id of the driver to retrieve
  string driver_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetDriverResponse {
  // The retrieved driver
  Driver driver = 1;
}

message ListDriversRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListDriversResponse {
  // The list of drivers
  repeated Driver drivers = 1;
}

message DeleteDriverRequest {
  // The id of the driver to delete
  string driver_id = 1 [(buf.validate.field).string.uuid = true];
}

message DeleteDriverResponse {}
